unpackaged/main/default/objects/Suggested_Care_Program__c/Suggested_Care_Program__c.object-meta.xml
<CustomObject>
    <label>Suggested Care Program</label>
    <nameField>
        <label>Suggested Programs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggested Care Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>