unpackaged/main/default/objects/Suggested_Care_Program__c/fields/isSelected__c.field-meta.xml
<CustomField>
    <fullName>isSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSelected</label>
    <type>Checkbox</type>
</CustomField>